<resources>
    <string name="app_name">UniBuddyApp</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="post_description">Post Description</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="register_link">Do not have an account, need new account?</string>
    <string name="loginwith">or Login with...</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="changeLang">Change Language</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="comments">Comments:</string>
    <string name="write_comment_here">Write a comment here!</string>
    <string name="search_people_title">Seach people for your study!</string>
    <string name="search_from_here">Search from here...</string>
    <string name="profile_name">Profile Name</string>
    <string name="profil_phone_number">Phone Number</string>
    <string name="profil_status">Tell about you here! Which lessons can you teach to other students? </string>
    <string name="profile_city">City</string>
    <string name="profile_university">University</string>
    <string name="profile_university_program">University Program</string>
    <string name="profile_university_year">University Year</string>
    <string name="profile_address">Address</string>
    <string name="postdescp">Write informations about your study partner search! Which lesson, where to study, how many hours/days...</string>
    <string name="update_post_button">Post your Partner Search!</string>
    <string name="motto">Find your Study Partner!</string>
    <string name="my_profile_fullname">Profile Name</string>
    <string name="my_profile_phone_number">Phone Number</string>
    <string name="my_profile_status">Tell about you here! Which lessons can you teach to other students?</string>
    <string name="my_profile_city">City</string>
    <string name="my_profile_university">University</string>
    <string name="my_profile_uniprogram">University Program</string>
    <string name="my_profile_uniyear">University Year</string>
    <string name="my_profile_address">Address</string>
    <string name="my_post_button">No of Posts</string>
    <string name="register_password">Password...</string>
    <string name="register_confirm_password">Confirm Password...</string>
    <string name="register_button">Register</string>
    <string name="forget_password_descp">We will mail you a link after when you provide email and click the send button. Please click on that link to reset your password!</string>
    <string name="forget_password_mail">Write your email here...</string>
    <string name="reset_password_button">Send Email</string>
    <string name="settings_status">Profile Status</string>
    <string name="settings_profile_full_name">Profil Name</string>
    <string name="settings_phonenumber">Phone Number</string>
    <string name="settings_city">City</string>
    <string name="settings_university">University</string>
    <string name="settings_university_program">University Program</string>
    <string name="settings_university_year">University Year</string>
    <string name="settings_adress">Address</string>
    <string name="update_account_settings_buttons">Update Account Settings</string>
    <string name="setup_fullname">Name, Surname</string>
    <string name="setup_phone_number">Phone Number</string>
    <string name="setup_country_name">City</string>
    <string name="setup_information_button">Save</string>
    <string name="comment_fullname">fullname</string>
    <string name="commented_on">commented on</string>
    <string name="comment_date">Date: </string>
    <string name="comment_text">Comment text will be displayed here!</string>
    <string name="comment_time">Time: </string>
    <string name="post_user_name">user name</string>
    <string name="text_update_post">has been updatet a post</string>
    <string name="post_date">Date</string>
    <string name="post_time">Time</string>
    <string name="post_about_info">Post Description...</string>
    <string name="all_users_profile_full_name">User Full Name</string>
    <string name="all_users_status">User Status</string>
    <string name="nav_user_full_name">username</string>
    <string name="soon_available">Facebook and Twitter Login will be available soon...</string>


</resources>
