<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProfile"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/my_profile_pic"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/logom"/>

            <TextView
                android:id="@+id/my_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_fullname"
                android:layout_below="@+id/my_profile_pic"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
            android:id="@+id/my_profile_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_phone_number"
            android:layout_below="@+id/my_profile_full_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

            <TextView
            android:id="@+id/my_profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_status"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/my_profile_phone_number"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"/>

            <TextView
                android:id="@+id/my_profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_city"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/my_profile_status"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/my_profile_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_university"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/my_profile_city"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/my_profile_uniprogram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_uniprogram"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/my_profile_university"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/my_profile_uniyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_university_year"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/my_profile_uniprogram"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/my_profile_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_address"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/my_profile_uniyear"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/my_post_button"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/my_post_button"
                android:layout_below="@+id/my_profile_adress"
                android:background="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"/>



        </RelativeLayout>


    </ScrollView>
</RelativeLayout>