<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/logom"/>

            <EditText
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_image"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_status"
                android:padding="30dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_status"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_profile_full_name"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_full_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_phonenumber"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_phonenumber"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_city"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_city"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_university"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_university_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_university"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_university_program"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_university_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_university_program"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_university_year"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/settings_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_university_year"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/inputs"
                android:hint="@string/settings_adress"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/update_account_settings_buttons"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/settings_adress"
                android:text="@string/update_account_settings_buttons"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>




        </RelativeLayout>

    </ScrollView>


</RelativeLayout>