<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SetupActivity">

    <ImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/logom" />

    <EditText
        android:id="@+id/setup_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/setup_fullname"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_fullname"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/setup_phone_number"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/country"
        android:ems="10"
        android:hint="@string/setup_country_name"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <Button
        android:id="@+id/setup_information_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_country_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:imeOptions="normal"
        android:padding="14dp"
        android:text="@string/setup_information_button"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>