<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ClickPostActivity">

    <TextView
        android:id="@+id/click_post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:padding="30dp"
        android:text="@string/post_description"
        android:background="@drawable/inputs"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/delete_post_button"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/edit_post"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/delete_post"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>