<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/forget_password_toolbar"
        layout="@layout/app_bar_layout">

    </include>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/forget_password_toolbar"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="197dp"
        android:text="@string/forget_password_descp"/>

    <EditText
        android:id="@+id/reset_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/forget_password_mail"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/reset_password_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button"
        android:text="@string/reset_password_button"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>